@@ -16,7 +16,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
 
@@ -41,9 +40,30 @@ public class ServImpl implements ServService {
                 .orElseThrow(() -> new EntityNotFoundException("Service with ID " + servId + " not found"));
         log.info("SoOrderServiceImpl::findServicesById in ID {} ",services.getServId());
 
+        CustomerRequest existCustomerRequest = customerRequestService.getById(services.getCustomer().getCreqEntityId());
+        CustomerResponseDTO customerRequestById = TransactionMapper.mapEntityToDto(existCustomerRequest, CustomerResponseDTO.class);
+
         List<ServiceOrders> allSeroByServId = servOrderService.findAllSeroByServId(services.getServId());
 
-        List<ServiceOrderRespDto> serviceOrderRespDtos = allSeroByServId.stream()
+        List<ServiceOrderRespDto> serviceOrderRespDtos = getAllServiceOrderByServId(allSeroByServId);
+
+        ServicePremi servicePremi = servPremiService.findByServId(services.getServId());
+        SemiDto semiDto = TransactionMapper.mapEntityToDto(servicePremi, SemiDto.class);
+        List<SecrDto> secrDtoList = getServicePremiByServId(services.getServId());
+        semiDto.setSecrDtoList(secrDtoList);
+
+        ServiceRespDto serviceRespDto = TransactionMapper.mapEntityToDto(services, ServiceRespDto.class);
+
+        serviceRespDto.setCustomerResponseDTO(customerRequestById);
+        serviceRespDto.setServiceOrdersList(serviceOrderRespDtos);
+        serviceRespDto.setSemiDto(semiDto);
+
+        return serviceRespDto;
+    }
+
+    private List<ServiceOrderRespDto> getAllServiceOrderByServId(List<ServiceOrders> allSeroByServId){
+
+        return allSeroByServId.stream()
                 .map(serviceOrders -> {
                     ServiceOrderRespDto dto = TransactionMapper.mapEntityToDto(serviceOrders, ServiceOrderRespDto.class);
                     List<SoTasksDto> soTasksDtoList = servOrderTaskService.findSeotBySeroId(dto.getSeroId()).stream()
@@ -57,25 +77,12 @@ public class ServImpl implements ServService {
                     dto.setSoTasksDtoList(soTasksDtoList);
                     return dto;
                 })
-                .collect(Collectors.toList());
-
-        ServicePremi servicePremi = servPremiService.findByServId(services.getServId());
-        SemiDto semiDto = TransactionMapper.mapEntityToDto(servicePremi, SemiDto.class);
-        List<SecrDto> secrDtoList = servPremiCreditService.findByServId(services.getServId()).stream()
-                .map(secr -> TransactionMapper.mapEntityToDto(secr, SecrDto.class))
-                .collect(Collectors.toList());
-        semiDto.setSecrDtoList(secrDtoList);
-
-        ServiceRespDto serviceRespDto = TransactionMapper.mapEntityToDto(services, ServiceRespDto.class);
-
-        CustomerRequest existCustomerRequest = customerRequestService.getById(services.getCustomer().getCreqEntityId());
-        CustomerResponseDTO customerRequestById = TransactionMapper.mapEntityToDto(existCustomerRequest, CustomerResponseDTO.class);
-
-        serviceRespDto.setCustomerResponseDTO(customerRequestById);
-        serviceRespDto.setServiceOrdersList(serviceOrderRespDtos);
-        serviceRespDto.setSemiDto(semiDto);
-
-        return serviceRespDto;
+                .toList();
     }
 
+    private List<SecrDto> getServicePremiByServId(Long servId){
+        return servPremiCreditService.findByServId(servId).stream()
+                .map(secr -> TransactionMapper.mapEntityToDto(secr, SecrDto.class))
+                .toList();
+    }
 }
